css/style.css
/*
font-family: 'Poppins', sans-serif;
font-family: 'Montserrat', sans-serif;
*/

*, *::before, *::after {
    margin: 0;
    border: 0;
    box-sizing: border-box;
}

@font-face {
    font-family: PopThin;
    src: url('../fonts/Poppins-Thin.ttf');
}

@font-face {
    font-family: PopLight;
    src: url('../fonts/Poppins-Light.ttf');
}

@font-face {
    font-family: PopMedium;
    src: url('../fonts/Poppins-Medium.ttf');
}

.capitalize {
    text-transform: capitalize;
}

.preloader {
    position: fixed;
    top: 0;
    height: 100vh;
    width: 100%;
    background-color: #FFF8F8;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}

body {
    font-family: PopLight;
}

.modal {
    z-index: 1000;
}

.modal-card-head, .modal-card-title, .modal-card-body, .modal-card-foot {
    background-color: rgba(0,0,1,.7);
    color: #fff;
}

.reset-a, .reset-a:hover, .reset-a:visited, .reset-a:focus, .reset-a:active  {
    text-decoration: none;
    color: inherit;
    outline: 0;
}

.nav-open {
    position: absolute;
    top: 0px;
    /* left: 0px;
    width: 100%; */
    left: -5vw;
    width: 112%;
    height: 50vh;
    background-color: white;
    z-index: 1;
    color: black;
    --display: grid;
    --grid-template-columns: 5% 1fr 1fr 5%;
    justify-items: center;
    align-items: center;
    text-align: center;
    transform: translateY(-100%);
}
.menu-open {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    height: 100%;
    text-align: center;
}

.menu-bar {
    padding-right: 3rem;
}

.nav-open h3 {
    font-family: PopMedium;
    font-size: 1.7rem;
    padding-bottom: 1.5em;
}

.nav-open p {
    font-size: 1.1rem;
}
.nav-open a {
    text-decoration: none;
    color: black;
    font-variant: small-caps;
    font-size: 1.5rem;
    cursor: pointer;
    transition: all;
}

.nav-open a:hover {

    color: #B300FF;
    
}


.social-footer a {
    backface-visibility: hidden;
}

.social-links img {
    padding: 0 20px;
} 

.logo, .menu {
    z-index: 2;
}
.menu {
    cursor: pointer;
    display: none;
    padding-right: 5rem;
}

.wrapper {
    color: white;
}

.hero {
    background: linear-gradient(237.62deg, rgba(179, 0, 255, 0.7) 1.33%, rgba(7, 16, 242, 0.7) 100%), url('../img/hero-background.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
}
nav {
    position: fixed;
    min-height: 10vh;
    width: 100vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 0px;
    z-index: 999;
    transition: all 0.3s;
}

.nav-item {
    text-decoration: none;
    color: #fff;
    font-size: 1.3rem;
    font-variant: small-caps;
    margin: .5rem;
    letter-spacing: 0.1rem;
    border-bottom: 3px solid  transparent;
    transition: all 0.4s;
}

a.active {
    color: #D7F205;
    border-bottom: 3px solid  #D7F205;
}

.nav-item:hover {
    color: #D7F205;
}

.logo {
    /* font-size: 1.5rem; */
    padding-left: 2rem;
    height: 60px;
    width: 130px;
}

.page {
    min-height: 100vh;
    display: grid;
    grid-template-columns: 5% 1fr 5%;
}

.welcome {
    grid-column: 2/3;
    align-self: center;
    justify-content: center;
    text-align: center;
}

.yamistha-logo {
    height: 5rem;
    margin: 0;
    padding:0;
}

.yamistha-welcome {
    font-family: PopThin;
    font-weight: 200;
    font-size: 4.1rem;
    letter-spacing: 0.07rem;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.yamistha-welcome-bold {
    font-family: PopMedium;
}

.yamistha-welcome-caption {
    font-size: 1.9rem;
    margin-bottom: 2rem;
}

.btn-lg {
    display: inline-block;
    text-decoration: none;
    border: 5px solid #23D9B7;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 20px;
    font-family: PopMedium;
    letter-spacing: 0.1rem;
    font-size: 1.5rem;
    color: #23D9B7;
    padding: 0.2rem 2.5rem;
    margin: 2rem 0.5rem;
    backface-visibility: hidden;
    transition: all 0.3s;
}

.btn-lg:hover {
    color: #D7F205;
    border: 5px solid #D7F205;
    transform: scale(1.2);
}

.eighty {
    position: absolute;
    max-height: 80px;
    bottom: 1rem;
    left: 50%;
    transform: translateX(-50%);
}

.welcome-date {
    font-size: 1.5rem;
    line-height: 27px;
    color: rgba(255, 255, 255, 0.8);
}

.welcome-location {
    line-height: 27px;
    color: rgba(255, 255, 255, 0.8);
}

.pages {
    position: absolute;
    top: 50%;
    right: 5%;
    transform: translateY(-50%);
}

.pages > div {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.pages  h3 {
    font-size: 1.5rem;
    padding: 1.8rem;
}

.pages svg {
    cursor: pointer;
    opacity: 0.5;
    transform: scale(2);
}

.pages svg:hover {
    animation: dot 0.5s ease-in-out infinite alternate;
    animation: name duration timing-function delay iteration-count direction fill-mode;
}

.pages svg.active {
    opacity: 1;
}

@keyframes dot {
    0%{
        transform: scale(2);
    }

    100% {
        transform: scale(3);
    }
}

.details {
    display: flex;
    flex-direction: row;
    align-self: center;
    justify-content: space-around;
    text-align: center;
    width: 100%;
    padding-bottom: 1rem;
}

.about {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    /* background: linear-gradient(45deg, rgb(38, 37, 37),rgb(40, 39, 34)); */
    background: linear-gradient(to right, #22013b, rgb(53, 5, 99));
}

.page-heading-container {
    text-align: center;
    margin-top: 5rem;
    margin-bottom: 5rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.page-heading {
    display: inline-block;
    font-size: 2rem;
    text-transform: capitalize;
    color: #E6BCF9;
    border-bottom: 3px solid #B300FF;
    position: inherit;
    top: 0;
    
}

.about-box {
    padding-top: 5rem;
    padding-bottom: 5rem;
    padding-left: 2rem;
    padding-right: 2rem;
    max-width: 700px;
    margin: 1rem;
    font-size: 1.5rem;
    letter-spacing: 0.05em;
    text-align: left;
    color: #FFF8F8; 
}

.sponsors {
    margin-top: 1rem;
    min-width: 300px;
}
.sponsor-heading {
    font-family: PopMedium;
    text-transform: uppercase;
    font-size: 1rem;
    text-align: center;
    letter-spacing: 0.05em;
    font-variant: small-caps;
    color: #D7F205;
}

.logos {
    margin-top: 5rem;
}

.logos > svg {
    height: 100px; 
    color:white;
    margin:1rem
}


.events {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background:linear-gradient(rgba(0,0,0, 0.5), rgba(0,0,0, 0.5)), url('../img/event-background.jpg');
    background-size: cover;

    background-attachment: fixed;
    padding-bottom: 2rem;
}

.page-heading1 {
    display: inline-block;
    font-size: 2rem;
    text-transform: capitalize;
    color: #FFFDFD;
    border-bottom: 3px solid #D7F205;
    position: inherit;
    top: 0;
    
}

.img-responsive{
    cursor: pointer;
    max-width: 100%;
    margin: 0.5rem;
}

.competitions {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background: linear-gradient(to bottom, rgb(230, 3, 86) 0%, rgba(0, 17, 255, 0.9) 100%);
    background-attachment: fixed;
}

.page-heading2 {
    display: inline-block;
    font-size: 2rem;
    text-transform: capitalize;
    color: #FFFDFD;
    border-bottom: 3px solid  #D7F205;
    position: inherit;
    top: 0;
    
}

.workshops {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-image: url('../img/Bullseye-Gradient.svg');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}

.skew-box {
    position: relative;
}

.skew-box:before {
    content: '';
    position: absolute;
    top: -2px;
    left: -2px;
    right: -2px;
    bottom: -2px;
    background: linear-gradient(315deg, #B300FF, cyan);
    transform: skew(2deg, 2deg);
    z-index: 0;
}

.skew-content {
    background-color: black;
    position: relative;
    padding: 20px;
    z-index: 1;
}

.footer {
    position: relative;
    min-height: 10vh;
    background-color: #000;
    color: #FFFDFD;
    padding: 1rem;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    text-align: center;
}

.footer-heading  > p {
    border-bottom: 1px solid #D7F205;
    text-transform: uppercase;
    margin-bottom: 0px;
    padding-bottom: 1px;
}

.footer svg {
    margin:0 10px;
    height: 30px;
    color: #FFF8F8;
    transition: all 0.3s;
}


.footer svg:hover {
    height: 30px;
    color: #D7F205;
    transform: scale(1.1);
}

.row {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: row;
}

.credits {
    text-decoration: none;
    color: #D7F205;
    border-bottom: 1px dotted #D7F205;
    transition: all 0.3s;
}

.credits:hover {
    
    color: #B300FF;
    border-bottom: 1px dotted #B300FF;
    cursor: pointer;
}

.columns {
    width: 100%;
    height: 100%;
    margin: 0;
}

.card {
    max-width: 400px;
    margin-bottom: 2rem;
}

.card-dark {
    color: #fff;
    background-color: #282727;
}

.card-color {
    color: #fff;
    /* background-color: rgb(60, 14, 104); */
    background-color: rgb(37, 3, 68);
}

.card-trans {
    opacity: 0.95;
}

@media (max-width: 900px) {
    .logo {
        font-size: 1rem;
        padding-left: 1rem;
        height: 50px;
    }
    .menu {
        display: flex;
        height: 1rem;
        padding-right: 1rem;
    }
    .menu-bar{
        display: none;
    }
    .nav-open a {
        font-size: 1.2rem;
    }
    .wrapper {
        
        background-size: cover;
        
    }
    .page {
        grid-template-columns: 1fr;
    }
    .hero{
        background-attachment: scroll;
        background-position: 40%;
    }
    .welcome {
        grid-column: 1/2;
        
    }
    .yamistha-welcome {
        font-size: 2rem;
    }
    .yamistha-welcome-caption {
        font-size: 1rem;
    }
    .btn-lg {
        font-size: 1rem;
        padding: 0.2rem 1.5rem;
        margin: 1rem 0.5rem;
    }

    .button {
        transition: all 0.3s;
    }
    .welcome-date{
        font-size: 0.8rem;
    }
    .welcome-location {
        font-size: 0.7rem;
    }

    .page-heading {
        font-size: 1.8rem;
    }
    .page-heading-container{
        margin-top: 2rem;
    }
    .pages  h3 {
        font-size: 0.5rem;
        padding: 0.4rem;
    }
    .pages svg {
        transform: scale(1);
    }

    .details {
        flex-direction: column;
        justify-content: center;
        padding: 5vw;
    }
    .about-box {
        font-size: 12px;
        padding: 1rem 2rem;
    }

    .eighty{
        max-height: 60px;
        bottom: 5px;
    }

    .logos {
        margin-top: 1rem;
    }

    .logos > svg {
        height: 50px;
        margin: .5rem
    }

    .img-responsive{
        width: 110px;
        margin: 0px;
    }

    .footer {
        font-size: 0.8rem;
    }
}

